PC-717 fix to line spacing

--- a/vufind/themes/msul/less/custom.less
+++ b/vufind/themes/msul/less/custom.less
@@ -781,27 +781,28 @@ table tr {
   .result-body {
     & :not(:first-child) {
       font-size:14px;
+      line-height:1.6rem;
    }
-//    & > * {
-//    margin-bottom:0.15rem;
-//    }
+    & > * {
+    margin-bottom:0.2rem;
+    }
     .result-formats span {
       font-size:12px;
+      line-height:1rem;
       margin-top:0.5rem;
     }
   }
-  .media { //EDS
+  .media { 
     .media-left {
       font-size:14px; 
       }
-    }
   @media only screen and (min-width : 768px) {
     .result-links {
       padding-left:1rem;
     }
   }
 }
-
+}
 
 // Placehold (Get This)
 
